# bazel_rules_typescript_extras

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  package.json
docker/: docker_nodejs_image.bzl  docker_push_group.bzl
examples/server/: BUILD.bazel
